# 10_ORel

./: .gitignore  pyproject.toml
.history/: pyproject_20240225231924.toml  pyproject_20240226165101.toml
.history/assignment3/: 6_opo_20240227060437.ipynb  6_opo_20240227060510.ipynb
assignment2/: 2_gridworld.ipynb  5_policy_evaluation.ipynb
assignment3/datasets/: dataset4.csv  dataset5.csv  dataset6.csv  dataset7.csv  dataset9.csv
week1/: RiverSwim.ipynb  ucb1.ipynb
week2/: HA2_gridworld.py
week3/: 4_gridworld.ipynb  5_ope.ipynb  6_opo.ipynb
week3/datasets/: dataset0.csv  dataset1.csv  dataset2.csv  dataset3.csv  dataset8.csv
week4/: CMA Cart Pole Torch Assignment.ipynb  CartPolePGMAssignment.ipynb  OReL.pdf:Zone.Identifier
week5/: HA5_Q3.ipynb  HA_Q5.ipynb  Prediction with Expert Advice-1.pdf:Zone.Identifier  Stochastic Bandits - the UCB algorithm 1-1.pdf:Zone.Identifier  riverswim.py
week6/: HA6_Q4.ipynb  HA6_Q4_copy.ipynb  LunarLanderDeepAssignment.ipynb  OReL-1.pdf:Zone.Identifier
week7/: HA7_Q2.ipynb  riverswim.py
week8/: HA8_Q1.ipynb  HA8_Q2.ipynb  HA8_Q3.ipynb  UCRL2_L.py
