
[tool.poetry]
name = "10_orel"
version = "0.1.0"
description = ""
authors = ["Toke Reines <toke.reines@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.26.4"
matplotlib = "^3.8.2"
ipykernel = "^6.29.2"
seaborn = "^0.13.2"
pandas = "^2.2.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
