
[tool.poetry]
name = "10_orel"
version = "0.1.0"
description = ""
authors = ["Toke Reines <toke.reines@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.26.4"
matplotlib = "^3.8.2"
ipykernel = "^6.29.2"
seaborn = "^0.13.2"
pandas = "^2.2.0"
gymnasium = {extras = ["classic-control"], version = "^0.29.1"}
cma = "^3.3.0"
torch = "^2.2.1"
tqdm = "^4.66.2"
ipywidgets = "^8.1.2"
jupyterlab-widgets = "^3.0.10"
jupyter = "^1.0.0"
widgetsnbextension = "^4.0.10"
pandas-profiling = "^3.6.6"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
